--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,299 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:layout_marginBottom="10dp"
+        android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:gravity="bottom"
+        >
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/baseline_format_list_bulleted_24"
+            android:layout_marginHorizontal="10dp"
+            android:background="@android:color/transparent"
+            >
+
+        </ImageButton>
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.13"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.1"
+        android:text="-56"
+        android:textSize="35sp"
+        android:textColor="@color/grey"
+        android:paddingHorizontal="13dp"
+        android:paddingTop="13dp"
+        android:gravity="right|center"
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:text="9,999"
+        android:textSize="55sp"
+        android:textColor="@color/white"
+        android:paddingHorizontal="13dp"
+        android:gravity="right|center"
+        android:layout_weight="0.1"
+        />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.1"
+            android:orientation="horizontal"
+            >
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="AC"
+                android:textSize="20sp"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/brighterGrey"
+                android:layout_marginHorizontal="5dp"
+                />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="+/-"
+                android:textSize="20sp"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/brighterGrey"
+                android:layout_marginHorizontal="5dp"
+                />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="%"
+                android:textSize="30sp"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/brighterGrey"
+                android:layout_marginHorizontal="5dp"
+                />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="÷"
+                android:textSize="50sp"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/yellow"
+                android:layout_marginHorizontal="5dp"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.1"
+            android:orientation="horizontal"
+            >
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="7"
+                android:textSize="30sp"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/softGrey"
+                android:layout_marginHorizontal="5dp"
+                />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="8"
+                android:textSize="30sp"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/softGrey"
+                android:layout_marginHorizontal="5dp"
+                />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="9"
+                android:textSize="30sp"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/softGrey"
+                android:layout_marginHorizontal="5dp"
+                />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="╳"
+                android:textSize="30sp"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/yellow"
+                android:layout_marginHorizontal="5dp"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.1"
+            android:orientation="horizontal"
+            >
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="4"
+                android:textSize="30sp"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/softGrey"
+                android:layout_marginHorizontal="5dp"
+                />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="5"
+                android:textSize="30sp"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/softGrey"
+                android:layout_marginHorizontal="5dp"
+                />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="6"
+                android:textSize="30sp"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/softGrey"
+                android:layout_marginHorizontal="5dp"
+                />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="─"
+                android:textSize="40sp"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/yellow"
+                android:layout_marginHorizontal="5dp"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.1"
+            android:orientation="horizontal"
+            >
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="1"
+                android:textSize="30sp"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/softGrey"
+                android:layout_marginHorizontal="5dp"
+                />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="2"
+                android:textSize="30sp"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/softGrey"
+                android:layout_marginHorizontal="5dp"
+                />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="3"
+                android:textSize="30sp"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/softGrey"
+                android:layout_marginHorizontal="5dp"
+                />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="+"
+                android:textSize="40sp"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/yellow"
+                android:layout_marginHorizontal="5dp"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.1"
+            android:orientation="horizontal"
+            >
+            <ImageButton
+                android:id="@+id/functions"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:src="@drawable/calculator_solid_full"
+                app:tint="@color/white"
+                android:backgroundTint="@color/softGrey"
+                android:layout_marginHorizontal="5dp"
+                android:background="@drawable/circle"
+                android:layout_marginVertical="4dp"
+                />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="0"
+                android:textSize="30sp"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/softGrey"
+                android:layout_marginHorizontal="5dp"
+                />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="."
+                android:textSize="30sp"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/softGrey"
+                android:layout_marginHorizontal="5dp"
+                />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="="
+                android:textSize="40sp"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/yellow"
+                android:layout_marginHorizontal="5dp"
+                />
+        </LinearLayout>
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
