- FrontEnd Designing - Landscape Design Handling

--- a/app/src/main/res/menu/popup.xml
+++ b/app/src/main/res/menu/popup.xml
@@ -15,5 +15,6 @@
     <item
         android:id="@+id/convert"
         android:title="Convert"
+        android:checkable="true"
         />
 </menu>
