--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
             android:src="@drawable/baseline_format_list_bulleted_24"
             android:layout_marginHorizontal="10dp"
             android:background="@android:color/transparent"
+            android:contentDescription="Menu"
             >
 
         </ImageButton>
@@ -44,7 +45,7 @@
         android:textColor="@color/grey"
         android:paddingHorizontal="13dp"
         android:paddingTop="13dp"
-        android:gravity="right|center"
+        android:gravity="end|center"
         />
     <TextView
         android:layout_width="match_parent"
@@ -53,7 +54,7 @@
         android:textSize="55sp"
         android:textColor="@color/white"
         android:paddingHorizontal="13dp"
-        android:gravity="right|center"
+        android:gravity="end|center"
         android:layout_weight="0.1"
         />
 
@@ -64,44 +65,24 @@
             android:orientation="horizontal"
             >
             <Button
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                style="@style/brightButtons"
                 android:text="AC"
                 android:textSize="20sp"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/brighterGrey"
-                android:layout_marginHorizontal="5dp"
                 />
             <Button
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                style="@style/brightButtons"
                 android:text="+/-"
                 android:textSize="20sp"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/brighterGrey"
-                android:layout_marginHorizontal="5dp"
                 />
             <Button
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                style="@style/brightButtons"
                 android:text="%"
                 android:textSize="30sp"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/brighterGrey"
-                android:layout_marginHorizontal="5dp"
                 />
             <Button
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                style="@style/yellowButtons"
                 android:text="÷"
                 android:textSize="50sp"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/yellow"
-                android:layout_marginHorizontal="5dp"
                 />
         </LinearLayout>
 
@@ -112,44 +93,24 @@
             android:orientation="horizontal"
             >
             <Button
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                style="@style/softButtons"
                 android:text="7"
                 android:textSize="30sp"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/softGrey"
-                android:layout_marginHorizontal="5dp"
                 />
             <Button
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                style="@style/softButtons"
                 android:text="8"
                 android:textSize="30sp"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/softGrey"
-                android:layout_marginHorizontal="5dp"
                 />
             <Button
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                style="@style/softButtons"
                 android:text="9"
                 android:textSize="30sp"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/softGrey"
-                android:layout_marginHorizontal="5dp"
                 />
             <Button
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                style="@style/yellowButtons"
                 android:text="╳"
                 android:textSize="30sp"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/yellow"
-                android:layout_marginHorizontal="5dp"
                 />
         </LinearLayout>
 
@@ -160,44 +121,24 @@
             android:orientation="horizontal"
             >
             <Button
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                style="@style/softButtons"
                 android:text="4"
                 android:textSize="30sp"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/softGrey"
-                android:layout_marginHorizontal="5dp"
                 />
             <Button
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                style="@style/softButtons"
                 android:text="5"
                 android:textSize="30sp"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/softGrey"
-                android:layout_marginHorizontal="5dp"
                 />
             <Button
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                style="@style/softButtons"
                 android:text="6"
                 android:textSize="30sp"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/softGrey"
-                android:layout_marginHorizontal="5dp"
                 />
             <Button
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                style="@style/yellowButtons"
                 android:text="─"
                 android:textSize="40sp"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/yellow"
-                android:layout_marginHorizontal="5dp"
                 />
         </LinearLayout>
 
@@ -208,44 +149,24 @@
             android:orientation="horizontal"
             >
             <Button
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                style="@style/softButtons"
                 android:text="1"
                 android:textSize="30sp"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/softGrey"
-                android:layout_marginHorizontal="5dp"
                 />
             <Button
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                style="@style/softButtons"
                 android:text="2"
                 android:textSize="30sp"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/softGrey"
-                android:layout_marginHorizontal="5dp"
                 />
             <Button
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                style="@style/softButtons"
                 android:text="3"
                 android:textSize="30sp"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/softGrey"
-                android:layout_marginHorizontal="5dp"
                 />
             <Button
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                style="@style/yellowButtons"
                 android:text="+"
                 android:textSize="40sp"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/yellow"
-                android:layout_marginHorizontal="5dp"
                 />
         </LinearLayout>
 
@@ -257,45 +178,33 @@
             >
             <ImageButton
                 android:id="@+id/functions"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:src="@drawable/calculator_solid_full"
-                app:tint="@color/white"
-                android:backgroundTint="@color/softGrey"
-                android:layout_marginHorizontal="5dp"
-                android:background="@drawable/circle"
+                style="@style/softButtons"
                 android:layout_marginVertical="4dp"
+                android:src="@drawable/calculator_solid_full"
+                android:background="@drawable/circle"
+                android:contentDescription="Calculator Icon"
+                />
+            <ImageButton
+                android:layout_height="0dp"
+                android:layout_width="0dp"
+                android:id="@+id/functions2"
+                android:visibility="gone"
+                android:contentDescription="Calculator Icon"
                 />
             <Button
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                style="@style/softButtons"
                 android:text="0"
                 android:textSize="30sp"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/softGrey"
-                android:layout_marginHorizontal="5dp"
                 />
             <Button
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                style="@style/softButtons"
                 android:text="."
                 android:textSize="30sp"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/softGrey"
-                android:layout_marginHorizontal="5dp"
                 />
             <Button
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                style="@style/yellowButtons"
                 android:text="="
                 android:textSize="40sp"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/yellow"
-                android:layout_marginHorizontal="5dp"
                 />
         </LinearLayout>
 
