--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#808080</color>
-    <color name="softGrey">#3A3A3B</color>
+    <color name="softGrey">#2D2D2D</color>
     <color name="brighterGrey">#5C5C5F</color>
-    <color name="darkGrey">#3A3A4B</color>
+    <color name="darkGrey">#232324</color>
     <color name="yellow">#FE9E0A</color>
 </resources>
