--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,60 +11,61 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
         android:layout_marginBottom="10dp"
+        android:gravity="center"
         android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:gravity="bottom"
-        >
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/baseline_format_list_bulleted_24"
-            android:layout_marginHorizontal="20dp"
-            android:background="@android:color/transparent"
-            android:contentDescription="Menu"
-            >
-        </ImageButton>
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/spacer"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.19"
-        android:orientation="horizontal"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:gravity="bottom">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.07"
-        android:text="-56"
-        android:textSize="25sp"
-        android:textColor="@color/grey"
-        android:paddingHorizontal="15dp"
-        android:paddingTop="20dp"
-        android:gravity="end"
-        />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.11"
-        android:text="9,999"
-        android:textSize="50sp"
-        android:textColor="@color/white"
-        android:paddingHorizontal="15dp"
-        android:layout_marginBottom="10dp"
-        android:gravity="end"
-        />
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:background="@android:color/transparent"
+                android:contentDescription="Menu"
+                android:src="@drawable/baseline_format_list_bulleted_24"></ImageButton>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/spacer"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.19"
+            android:orientation="horizontal" />
+
+        <TextView
+            android:id="@+id/expression"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.07"
+            android:gravity="end"
+            android:paddingHorizontal="15dp"
+            android:paddingTop="20dp"
+            android:text=""
+            android:textColor="@color/grey"
+            android:textSize="25sp" />
+
+        <TextView
+            android:id="@+id/result"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginBottom="10dp"
+            android:layout_weight="0.11"
+            android:gravity="end"
+            android:paddingHorizontal="15dp"
+            android:text="0"
+            android:textColor="@color/white"
+            android:textSize="50sp" />
+
         <LinearLayout
             android:id="@+id/special"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.0"
-            android:layout_marginHorizontal="13dp">
+            android:layout_marginHorizontal="13dp"
+            android:layout_weight="0.0">
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -233,162 +234,155 @@
             android:id="@+id/normal"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.1"
-            android:orientation="horizontal"
             android:layout_marginHorizontal="10dp"
-            >
-            <Button
-                style="@style/brightButtons"
-                android:text="AC"
-                />
-            <Button
-                style="@style/brightButtons"
-                android:text="+/-"
-                />
-            <Button
-                style="@style/brightButtons"
-                android:text="%"
-                android:textSize="30sp"
-                />
-            <Button
-                style="@style/yellowButtons"
-                android:text="÷"
-                android:textSize="30sp"
-                />
-        </LinearLayout>
+            android:layout_weight="0.5"
+            android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.1"
-            android:orientation="horizontal"
-            android:layout_marginHorizontal="10dp"
-            >
-            <Button
-                style="@style/softButtons"
-                android:text="7"
-                android:textSize="30sp"
-                />
-            <Button
-                style="@style/softButtons"
-                android:text="8"
-                android:textSize="30sp"
-                />
-            <Button
-                style="@style/softButtons"
-                android:text="9"
-                android:textSize="30sp"
-                />
-            <Button
-                style="@style/yellowButtons"
-                android:text="╳"
-                android:textSize="30sp"
-                />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.1"
-            android:orientation="horizontal"
-            android:layout_marginHorizontal="10dp"
-            >
-            <Button
-                style="@style/softButtons"
-                android:text="4"
-                android:textSize="30sp"
-                />
-            <Button
-                style="@style/softButtons"
-                android:text="5"
-                android:textSize="30sp"
-                />
-            <Button
-                style="@style/softButtons"
-                android:text="6"
-                android:textSize="30sp"
-                />
-            <Button
-                style="@style/yellowButtons"
-                android:text="─"
-                android:textSize="30sp"
-                />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.1"
-            android:orientation="horizontal"
-            android:layout_marginHorizontal="10dp"
-            >
-            <Button
-                style="@style/softButtons"
-                android:text="1"
-                android:textSize="30sp"
-                />
-            <Button
-                style="@style/softButtons"
-                android:text="2"
-                android:textSize="30sp"
-                />
-            <Button
-                style="@style/softButtons"
-                android:text="3"
-                android:textSize="30sp"
-                />
-            <Button
-                style="@style/yellowButtons"
-                android:text="+"
-                android:textSize="30sp"
-                />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.1"
-            android:orientation="horizontal"
-            android:layout_marginHorizontal="10dp"
-            >
-            <ImageButton
-                android:id="@+id/functions"
-                style="@style/softButtons"
-                android:layout_marginVertical="4dp"
-                android:src="@drawable/calculator_solid_full"
-                android:background="@drawable/circle"
-                android:contentDescription="Calculator Icon"
-                />
-            <ImageButton
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_width="0dp"
-                android:id="@+id/functions2"
-                android:visibility="gone"
-                android:contentDescription="Calculator Icon"
-                />
-            <ImageButton
-                android:layout_height="0dp"
-                android:layout_width="0dp"
-                android:id="@+id/functions3"
-                android:visibility="gone"
-                android:contentDescription="Calculator Icon"
-                />
-            <Button
-                style="@style/softButtons"
-                android:text="0"
-                android:textSize="30sp"
-                />
-            <Button
-                style="@style/softButtons"
-                android:text="."
-                android:textSize="30sp"
-                />
-            <Button
-                style="@style/yellowButtons"
-                android:text="="
-                android:textSize="30sp"
-                />
-        </LinearLayout>
+                android:layout_weight="0.1">
 
+                <Button
+                    style="@style/brightButtons"
+                    android:text="AC" />
+
+                <Button
+                    style="@style/brightButtons"
+                    android:text="+/-" />
+
+                <Button
+                    style="@style/brightButtons"
+                    android:text="%"
+                    android:textSize="30sp" />
+
+                <Button
+                    style="@style/yellowButtons"
+                    android:text="÷"
+                    android:textSize="30sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.1">
+
+                <Button
+                    style="@style/softButtons"
+                    android:text="7"
+                    android:textSize="30sp" />
+
+                <Button
+                    style="@style/softButtons"
+                    android:text="8"
+                    android:textSize="30sp" />
+
+                <Button
+                    style="@style/softButtons"
+                    android:text="9"
+                    android:textSize="30sp" />
+
+                <Button
+                    style="@style/yellowButtons"
+                    android:text="x"
+                    android:textSize="30sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.1">
+
+                <Button
+                    style="@style/softButtons"
+                    android:text="4"
+                    android:textSize="30sp" />
+
+                <Button
+                    style="@style/softButtons"
+                    android:text="5"
+                    android:textSize="30sp" />
+
+                <Button
+                    style="@style/softButtons"
+                    android:text="6"
+                    android:textSize="30sp" />
+
+                <Button
+                    style="@style/yellowButtons"
+                    android:text="-"
+                    android:textSize="30sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.1">
+
+                <Button
+                    style="@style/softButtons"
+                    android:text="1"
+                    android:textSize="30sp" />
+
+                <Button
+                    style="@style/softButtons"
+                    android:text="2"
+                    android:textSize="30sp" />
+
+                <Button
+                    style="@style/softButtons"
+                    android:text="3"
+                    android:textSize="30sp" />
+
+                <Button
+                    style="@style/yellowButtons"
+                    android:text="+"
+                    android:textSize="30sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.1">
+
+                <ImageButton
+                    android:id="@+id/functions"
+                    style="@style/softButtons"
+                    android:layout_marginVertical="4dp"
+                    android:background="@drawable/circle"
+                    android:contentDescription="Calculator Icon"
+                    android:src="@drawable/calculator_solid_full" />
+
+                <ImageButton
+                    android:id="@+id/functions2"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:contentDescription="Calculator Icon"
+                    android:visibility="gone" />
+
+                <ImageButton
+                    android:id="@+id/functions3"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:contentDescription="Calculator Icon"
+                    android:visibility="gone" />
+
+                <Button
+                    style="@style/softButtons"
+                    android:text="0"
+                    android:textSize="30sp" />
+
+                <Button
+                    style="@style/softButtons"
+                    android:text="."
+                    android:textSize="30sp" />
+
+                <Button
+                    style="@style/yellowButtons"
+                    android:text="="
+                    android:textSize="30sp" />
+            </LinearLayout>
+
+        </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
